--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>LA DORADA</title>
+    <!-- SEO -->
+    <meta name="description" content="Descubre una experiencia única en La Dorada, un encantador hotel estancia donde la elegancia se fusiona con la tranquilidad. Disfruta de habitaciones lujosas, gastronomía exquisita y vistas impresionantes.">
+    <meta name="keywords" content="Hotel estancia, Alojamiento de lujo, Experiencia única, Tranquilidad y elegancia,Vistas impresionantes, Reserva de hotel, Destino de vacaciones">
      <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,23 +15,29 @@
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/png">
     <!-- boostrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./css/style.css">
+    <title>LA DORADA | Home</title>
 </head>
   <body>
     <header class="d-flex flex-column align-items-center">
         <nav class="fixed-bottom navbar navbar-expand-lg dorada__bg__nav">
-            <div class="container-fluid">
-                <div class="">
+            <section class="container-fluid">
+              <!-- logo de la barra de navegacion -->
+              <article>
                     <a class="navbar-brand d-flex justify-content-center align-items-center dorada__nav__a fs-3" href="index.html">
-                        <img src="./assets/logo.png" alt="Logo" width="60" height="auto" class="d-inline-block align-text-top me-4 ms-4">
+                        <img src="./assets/logo.png" alt="Logo La Dorada Estancia" width="60" height="auto" class="d-inline-block align-text-top me-4 ms-4">
                       LA DORADA
                     </a>
-                </div>
+              </article>
+              <!-- boton amburgesa-->
               <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+              <!-- links de la barra de navegacion -->
+              <article class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav align-items-center">
                   <li class="nav-item">
                     <a class="nav-link dorada__nav__link fs-5" aria-current="page" href="index.html">Home</a>
@@ -50,19 +58,23 @@
                     <a class="nav-link dorada__nav__link fs-5" aria-current="page" href="./pages/contacto.html">Contacto</a>
                   </li>
                 </ul>
-              </div>
-            </div>
+              </article>
+            </section>
         </nav>
-        <div class="img-principal opacity-75" style="background-image: url(./assets/hero-image-home.jpg);">
+        <!-- hero image principal -->
+        <div class="img__principal opacity-75" style="background-image: url(./assets/hero-image-home.jpg);">
         </div>
+        <!-- texto hero image -->
         <section class="titulo">
-          <h1>LA DORADA HOTEL BOUTIQUE</h1>
-          <h4>Un rincón sustentable en el Norte Cordobés</h4>
+          <h1>LA DORADA ESTANCIA</h1>
+          <h3>Un rincón sustentable en el Norte Cordobés</h3>
         </section>   
     </header>
-    <main id="main-index">
+
+    <main id="main__index">
+      <!-- texto de introduccion -->
       <section class="intro d-flex align-items-center">
-        <p class="intro-parrafo container-lg text-white" >
+        <p class="intro__parrafo container-lg text-white" data-aos="fade-up" data-aos-duration="2000">
           Descubre nuestro lujoso hotel sustentable en las sierras de Córdoba. 
           En este rincón exclusivo, la elegancia se fusiona con la belleza natural. Nuestras habitaciones y suites ofrecen un confort inigualable, 
           mientras que nuestra arquitectura respeta el entorno. Disfruta de vistas panorámicas, una experiencia gastronómica gourmet y actividades al aire libre para explorar las maravillas de las sierras.
@@ -70,10 +82,12 @@
            <br>Bienvenido a nuestro rincón sustentable en el Norte Cordobés.
         </p> 
       </section>
-      <div class="container">
-        <a href="./pages/quehacer.html" class="position-relative card-index">
-          <section class="section-card d-lg-flex">
-              <article class="col-12 col-lg-7 aling-item-center dorada__img__card">
+      <!-- card y links principales -->
+      <section class="container">
+        <a href="./pages/quehacer.html" class="position-relative card__index">
+          <section class="section__card d-lg-flex" data-aos="fade-up" data-aos-duration="2000">
+              <!-- descripcion de la card -->
+              <article class="col-12 col-lg-7 aling-item-center dorada__img__card"  data-aos="fade-right" data-aos-offset="500" data-aos-easing="ease-in-sine">
                   <h3>¿Que hacer?</h3>
                   <p>Disfruta de cenas con espectáculos en vivo, refréscate en nuestra piscina,
                       explora emocionantes excursiones y siente la libertad en nuestras cabalgatas.
@@ -81,11 +95,13 @@
                        te esperan para hacer de tu estadía un momento único.
                  </p>
               </article>
-              <article class="col-12 col-lg-5 d-flex justify-content-center">
-                <img src="./assets/quehacer-1.jpg" alt="¿Que hacer?" class="img-fluid d-flex">
+              <!-- imagen de la card -->
+              <article class="col-12 col-lg-5 d-flex justify-content-center" data-aos="fade-left" data-aos-offset="500" data-aos-easing="ease-in-sine">
+                <img src="./assets/quehacer-1.jpg" alt="imagen descriptiva de excurciones en un jeep" class="img-fluid d-flex">
               </article>
           </section>
-          <aside class="ver-mas text-center">
+          <!-- animacion hover en la card -->
+          <aside class="ver__mas text-center">
             <div class="d-flex flex-column justify-content-end">
               <small class="fs-4 text-white">Descubrir más</small>
               <i class="bi bi-chevron-compact-down fs-2 text-white"></i>
@@ -93,17 +109,17 @@
           </aside>
         </a>
 
-        <a href="./pages/habitaciones.html" class="position-relative card-index">
-            <section class="section-card d-lg-flex">
-              <article class="col-12 col-lg-7 aling-item-center dorada__img__card order-lg-1">
+        <a href="./pages/habitaciones.html" class="position-relative card__index">
+            <section class="section__card d-lg-flex" data-aos="fade-up" data-aos-duration="2000">
+              <article class="col-12 col-lg-7 aling-item-center dorada__img__card order-lg-1" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
                 <h3>Habitaciones</h3>
                 <p>Sumérgete en un oasis donde el confort y la vida al aire libre se combinan a la perfección. Nuestras habitaciones, decoradas en armonía con detalles únicos, ofrecen un ambiente acogedor y distinguido. Date el gusto de unos días de descanso merecidos: somos el lugar perfecto para venir solo, en pareja, en familia o con amigos, adaptándonos a tus preferencias.</p>
               </article>
-              <article class="col-12 col-lg-5 d-flex justify-content-center">
-                <img src="./assets/habitacion-3.jpg" alt="Habitaciones" class="img-fluid">
+              <article class="col-12 col-lg-5 d-flex justify-content-center"  data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
+                <img src="./assets/habitacion-3.jpg" alt="foto de habitacion con dos cama individuales" class="img-fluid">
               </article>
             </section>
-            <aside class="ver-mas text-center">
+            <aside class="ver__mas text-center">
             <div class="d-flex flex-column justify-content-end">
               <small class="fs-4 text-white">Descubrir más</small>
               <i class="bi bi-chevron-compact-down fs-2 text-white"></i>
@@ -111,17 +127,17 @@
           </aside>
         </a>
 
-        <a href="./pages/gastronomia.html" class="position-relative card-index">
-            <section class="section-card d-lg-flex">
-                <article class="col-12 col-lg-7 aling-item-center dorada__img__card">
+        <a href="./pages/gastronomia.html" class="position-relative card__index">
+            <section class="section__card d-lg-flex" data-aos="fade-up" data-aos-duration="2000">
+                <article class="col-12 col-lg-7 aling-item-center dorada__img__card" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
                     <h3>Gastronomia</h3>
                     <p>Deléitate con nuestra exquisita gastronomía gourmet y las auténticas comidas típicas de la zona. Nuestro restaurante te invita a un festín de sabores y aromas irresistibles, donde cada plato es una obra maestra culinaria. Disfruta de una experiencia gastronómica inigualable, fusionando la creatividad de nuestros chefs con los ingredientes frescos y locales que realzan los sabores tradicionales de la región.</p>
                 </article>
-                <article class="col-12 col-lg-5 d-flex justify-content-center">
-                  <img src="./assets/gastronomia-1.jpg" alt="Gastronomia" class="img-fluid">
+                <article class="col-12 col-lg-5 d-flex justify-content-center" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
+                  <img src="./assets/gastronomia-1.jpg" alt="presentacion de mesa principal con de tabla y cubiertos" class="img-fluid">
                 </article>
             </section>
-            <aside class="ver-mas text-center">
+            <aside class="ver__mas text-center">
             <div class="d-flex flex-column justify-content-end">
               <small class="fs-4 text-white">Descubrir más</small>
               <i class="bi bi-chevron-compact-down fs-2 text-white"></i>
@@ -129,17 +145,17 @@
           </aside>
         </a>
 
-        <a href="./pages/nosotros.html" class="position-relative card-index">   
-            <section class="section-card d-lg-flex">
-              <article class="col-12 col-lg-7 aling-item-center dorada__img__card order-lg-1 ">
+        <a href="./pages/nosotros.html" class="position-relative card__index" >   
+            <section class="section__card d-lg-flex" data-aos="fade-up" data-aos-duration="2000">
+              <article class="col-12 col-lg-7 aling-item-center dorada__img__card order-lg-1 " data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
                 <h3>Nosotros</h3>
                 <p>Nuestro equipo, apasionado y comprometido, se esfuerza por brindarte una experiencia excepcional. Desde recepción hasta cocina y limpieza, todos trabajamos juntos para tu satisfacción. Con atención al detalle y calidez genuina, te damos la bienvenida a nuestro hotel, donde la hospitalidad es nuestra prioridad.</p>
               </article>
-              <article class="col-12 col-lg-5 d-flex justify-content-center">
-                <img src="./assets/hero-image-nosotros.jpg" alt="Nuestro Equipo" class="img-fluid">
+              <article class="col-12 col-lg-5 d-flex justify-content-center" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
+                <img src="./assets/hero-image-nosotros.jpg" alt="Foto de Nuestro Equipo completo" class="img-fluid">
               </article>
             </section>
-            <aside class="ver-mas text-center">
+            <aside class="ver__mas text-center">
             <div class="d-flex flex-column justify-content-end">
               <small class="fs-4 text-white">Descubrir más</small>
               <i class="bi bi-chevron-compact-down fs-2 text-white"></i>
@@ -147,17 +163,17 @@
           </aside>
         </a>
 
-        <a href="./pages/contacto.html" class="position-relative card-index">
-            <section class="section-card d-lg-flex">
-              <article class="col-12 col-lg-7 aling-item-center dorada__img__card ">
+        <a href="./pages/contacto.html" class="position-relative card__index">
+            <section class="section__card d-lg-flex" data-aos="fade-up" data-aos-duration="2000">
+              <article class="col-12 col-lg-7 aling-item-center dorada__img__card " data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
                   <h3>Contacto</h3>
                   <p>Estamos aquí para responder a tus consultas, atender tus necesidades y asegurarnos de que disfrutes de una experiencia excepcional en nuestro hotel. Ya sea que desees realizar una reserva, obtener información adicional o compartir comentarios, nuestro amable equipo de atención al cliente está a tu disposición. No dudes en ponerte en contacto con nosotros, ¡Estaremos encantados de ayudarte en todo lo que necesites!</p>
               </article>
-              <article class="col-12 col-lg-5 d-flex justify-content-center">
-                <img src="./assets/hero-image-home.jpg" alt="Panoramica Estancia" class="img-fluid">
+              <article class="col-12 col-lg-5 d-flex justify-content-center" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
+                <img src="./assets/hero-image-home.jpg" alt="Foto panoramica de La Dorada Estancia" class="img-fluid">
               </article>
             </section>
-            <aside class="ver-mas text-center">
+            <aside class="ver__mas text-center">
             <div class="d-flex flex-column justify-content-end">
               <small class="fs-4 text-white">Descubrir más</small>
               <i class="bi bi-chevron-compact-down fs-2 text-white"></i>
@@ -165,28 +181,31 @@
           </aside>
         </a>
 
-      </div> 
+      </section> 
     </main>
 
-    <footer class="d-flex justify-content-between align-items-center flex-column flex-lg-row gap-3 pt-3 pb-3">
+    <footer class="d-flex justify-content-between align-items-center flex-column flex-lg-row gap-3 pt-3 pb-3" >
+      <!--Logo link al home  -->
       <a class="navbar-brand d-flex justify-content-center align-items-center dorada__nav__a fs-3" href="index.html">
           <img src="./assets/logo.png" alt="Logo" width="60" height="auto" class="d-inline-block align-text-top me-4 ms-4">
           <h3>LA DORADA</h3>
       </a>
-      <section class="geo-mail d-flex flex-wrap justify-content-center gap-2">
+      <!-- mail y direccion de la estancia -->
+      <section class="mail__geo d-flex flex-wrap justify-content-center gap-2">
         <div>
           <a  class="fs-6" href="https://goo.gl/maps/SUAMTLM3Tbd2eHdr8">
-            <i class="bi bi-geo-alt-fill dorada__footer__contacto fs-3"></i>
+            <i class="bi bi-geo-alt-fill fs-3"></i>
             Zona Rural, X5248 Rayo Cortado, Córdoba
           </a>
         </div>
         <div>
           <a  class="fs-6" href="mailto:ladorada.hotelboutique@gmail.com">
-            <i class="bi bi-envelope-fill dorada__footer__contacto fs-3"></i>
+            <i class="bi bi-envelope-fill fs-3"></i>
             ladorada.hotelboutique@gmail.com
           </a>
         </div>
       </section>
+      <!-- logos redes sociales -->
       <section class="redes d-flex">
           <a href="https://www.instagram.com/ladorada_estancia" target="_blank">
             <i class="bi bi-instagram fs-3"></i>
@@ -199,6 +218,13 @@
           </a>
       </section>
     </footer>
+    <!-- Boostrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <!-- AOS -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- AOS inicializacion-->
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
