--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>LA DORADA</title>
+    <!-- SEO -->
+    <meta name="description" content="Contáctanos y comunícate con nuestro equipo en La Dorada. Estamos aquí para ayudarte y responder a todas tus preguntas. Encuentra nuestras opciones de contacto y no dudes en solicitar información adicional, hacer reservas o compartir tus comentarios.">
+    <meta name="keywords" content="Contacto con La Dorada, Información de contacto, Equipo de atención al cliente,Consultas y preguntas, Reservas de habitaciones, Comentarios y sugerencias, Formulario de contacto, Dirección y ubicación, Teléfono de contacto, Correo electrónico">
      <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,21 +17,22 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
     <link rel="stylesheet" href="../css/style.css">
+    <title>LA DORADA | Contacto</title>
 </head>
   <body>
     <header class="d-flex flex-column align-items-center">
         <nav class="fixed-bottom navbar navbar-expand-lg dorada__bg__nav">
-            <div class="container-fluid">
-                <div class="">
-                    <a class="navbar-brand d-flex justify-content-center align-items-center dorada__nav__a fs-3" href="index.html">
+            <section class="container-fluid">
+                <article>
+                    <a class="navbar-brand d-flex justify-content-center align-items-center dorada__nav__a fs-3" href="../index.html">
                         <img src="../assets/logo.png" alt="Logo" width="60" height="auto" class="d-inline-block align-text-top me-4 ms-4">
                       LA DORADA
                     </a>
-                </div>
+                </article>
               <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+              <article class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav align-items-center">
                   <li class="nav-item">
                     <a class="nav-link dorada__nav__link fs-5" aria-current="page" href="../index.html">Home</a>
@@ -50,33 +53,34 @@
                     <a class="nav-link dorada__nav__link fs-5" aria-current="page" href="contacto.html">Contacto</a>
                   </li>
                 </ul>
-              </div>
-            </div>
+              </article>
+            </section>
         </nav>
     </header>
-    <main id="main-contacto" class="container d-flex flex-column align-items-center">
+    <main id="main__contacto" class="container d-flex flex-column align-items-center">
+      <h1>Contáctanos y Vivi una Experiencia Inolvidable en La Dorada</h1>
       <iframe class="col-11 mapa" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13810.83290497422!2d-63.824102!3d-30.0738969!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcf9efc448657c37d!2sLa%20Dorada%20Estancia!5e0!3m2!1ses-419!2sar!4v1677959348191!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       <section class="container">
         <div class="row d-flex align-items-center">
           <article class="col-lg-4 my-lg-5 text-center my-4">
-              <i class="bi bi-telephone-fill icon-contacto"></i>
+              <i class="bi bi-telephone-fill icon__contacto"></i>
               <h5>TELÉFONO</h5>
               <small><a href="tel:3522454258">(+549) 3522454258</a></small>
           </article>
           <article class="col-lg-4 my-lg-5 text-center my-4">
-              <i class="bi bi-envelope-fill icon-contacto"></i>
+              <i class="bi bi-envelope-fill icon__contacto"></i>
               <h5>EMAIL</h5>
               <small><a href="mailto:ladorada.hotelboutique@gmail.com">ladorada.hotelboutique@gmail.com</a></small>
           </article>
           <article class="col-lg-4 my-lg-5 text-center my-4">
             <a href="https://www.instagram.com/ladorada_estancia" target="_blank">
-              <i class="bi bi-instagram redes-contacto"></i>
+              <i class="bi bi-instagram redes__contacto"></i>
             </a>
             <a href="https://www.facebook.com/ladorada.hotelboutique" target="_blank">
-              <i class="bi bi-facebook redes-contacto"></i>
+              <i class="bi bi-facebook redes__contacto"></i>
             </a>
             <a href="http://wa.me/+5493522454258" target="_blank">
-              <i class="bi bi-whatsapp redes-contacto"></i>   
+              <i class="bi bi-whatsapp redes__contacto"></i>   
             </a>
             <h5>Nuestras Redes</h5>
           </article>
@@ -84,31 +88,31 @@
       </section>
       <form class="container shadow mb-5 mt-3">
           <h3 class="text-center py-4">DEJANOS TU COMENTARIO</h3>
-          <div class="form-floating mb-3">
+          <section class="form-floating mb-3">
             <input type="text" class="form-control" id="nombre" placeholder="Ingresar Nombre">
             <label for="nombre" class="form-label">Ingresa tu nombre</label>
-          </div>
-          <div class="form-floating mb-3">
+          </section>
+          <section class="form-floating mb-3">
             <input type="email" class="form-control" id="email" placeholder="name@example.com">
             <label for="email" class="form-label">Ingresa tu correo</label>
-          </div>
-          <div class="form-floating mb-3">
+          </section>
+          <section class="form-floating mb-3">
             <textarea class="form-control" id="comentario" rows="9" placeholder="Insertar comentario"></textarea>
             <label for="comentario" class="form-label">Deja tu comentario</label>
-          </div>
-          <div class="col-6 mx-auto">
-            <button type="submit" class="boton-form text-white mb-3 py-2">Submit</button>
-          </div>
+          </section>
+          <section class="col-6 mx-auto">
+            <button type="submit" class="boton__form text-white mb-3 py-2">Submit</button>
+          </section>
       </form>
         
     </main>
 
     <footer class="d-flex justify-content-between align-items-center flex-column flex-lg-row gap-3 pt-3 pb-3">
-      <a class="navbar-brand d-flex justify-content-center align-items-center dorada__nav__a fs-3" href="index.html">
+      <a class="navbar-brand d-flex justify-content-center align-items-center dorada__nav__a fs-3" href="../index.html">
           <img src="../assets/logo.png" alt="Logo" width="60" height="auto" class="d-inline-block align-text-top me-4 ms-4">
           <h3>LA DORADA</h3>
       </a>
-      <section class="geo-mail d-flex flex-wrap justify-content-center gap-2">
+      <section class="mail__geo d-flex flex-wrap justify-content-center gap-2">
         <div>
           <a  class="fs-6" href="https://goo.gl/maps/SUAMTLM3Tbd2eHdr8">
             <i class="bi bi-geo-alt-fill dorada__footer__contacto fs-3"></i>
