--- a/pages/gastronomia.html
+++ b/pages/gastronomia.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>LA DORADA</title>
+    <!-- SEO -->
+    <meta name="description" content="Sumérgete en una experiencia culinaria única en La Dorada. Descubre nuestra pasión por la gastronomía y disfruta de una variedad de sabores exquisitos. Desde platos tradicionales hasta creaciones innovadoras, nuestros chefs te deleitarán con una oferta gastronómica inigualable. Déjate tentar y saborea cada momento en La Dorada">
+    <meta name="keywords" content="Gastronomía en La Dorada, Experiencia culinaria, Sabores exquisitos, Cocina tradicional, Ingredientes frescos, Ambiente gastronómico, Platos gourmet, Degustación de sabores">
      <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,23 +15,25 @@
     <link rel="shortcut icon" href="../assets/favicon.png" type="image/png">
     <!-- boostrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
+    <title>LA DORADA | Gastronomia</title>
 </head>
   <body>
     <header class="d-flex flex-column align-items-center">
         <nav class="fixed-bottom navbar navbar-expand-lg dorada__bg__nav">
-            <div class="container-fluid">
-                <div class="">
-                    <a class="navbar-brand d-flex justify-content-center align-items-center dorada__nav__a fs-3" href="index.html">
+            <section class="container-fluid">
+                <article>
+                    <a class="navbar-brand d-flex justify-content-center align-items-center dorada__nav__a fs-3" href="../index.html">
                         <img src="../assets/logo.png" alt="Logo" width="60" height="auto" class="d-inline-block align-text-top me-4 ms-4">
                       LA DORADA
                     </a>
-                </div>
+                </article>
               <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+              <article class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav align-items-center">
                   <li class="nav-item">
                     <a class="nav-link dorada__nav__link fs-5" aria-current="page" href="../index.html">Home</a>
@@ -50,41 +54,41 @@
                     <a class="nav-link dorada__nav__link fs-5" aria-current="page" href="contacto.html">Contacto</a>
                   </li>
                 </ul>
-              </div>
-            </div>
+              </article>
+            </section>
         </nav>
     </header>
     
-    <main id="main-gastronomia">
-      <section class="padding-section imagen" style="background-image: url(../assets/gastronomia-1.jpg)" ></section>
+    <main id="main__gastronomia">
+      <section class="imagen" style="background-image: url(../assets/gastronomia-1.jpg)" ></section>
       <section class="padding-section text text-white">
-          <h2 class="display-5 titulo-parrafo">¡Los más deliciosos platos cordobeses!</h2>
-          <p class="fs-4 titulo-parrafo">En nuestro hotel, no solo encontrarás un restaurante excepcional, sino también una experiencia culinaria de primer nivel. 
+        <div class="degradado1"></div>
+          <h1 class="display-5 titulo-parrafo" data-aos="fade-up" data-aos-duration="2000">¡Los más deliciosos platos cordobeses!</h1>
+          <p class=" fs-4 titulo-parrafo" data-aos="fade-up" data-aos-duration="2000">En nuestro hotel, no solo encontrarás un restaurante excepcional, sino también una experiencia culinaria de primer nivel. 
             Nuestros talentosos profesionales culinarios se dedican a crear platos exquisitos que te permitirán descubrir nuevos sabores y
              sumergirte en la riqueza de nuestra cultura. Además, para complementar tu experiencia gastronómica, ofrecemos una amplia selección 
              de vinos y bebidas cuidadosamente elegidas, que realzarán aún más el sabor de nuestras delicias culinarias. ¡Ven y déjate sorprender por 
              la combinación perfecta de sabores y tragos finos en nuestro hotel!</p>
       </section>
-      <section class="padding-section imagen" style="background-image: url(../assets/gastronomia-2.jpg)"></section>
+      <section class="imagen" style="background-image: url(../assets/gastronomia-2.jpg)"></section>
       <section class="padding-section text text-white d-flex flex-column align-items-center">
-          <h2 class="display-5 titulo-parrafo">¡Conocé los servicios que te ofrecemos!</h2>
-          <p class="fs-4 titulo-parrafo">Pensión completa gourmet bajo el servicio de todo incluído:</p>
-            <ul class="item__paralax">
-              <li class="fs-4">Desayuno americano, Almuerzo, Merienda, Cena.
-              </li>
-              <li class="fs-4">Bebidas incluidas: gaseosa en almuerzo y cena. 
-              </li>
+          <div class="degradado2"></div>
+          <h2 class="col-11 display-5 titulo-parrafo" data-aos="fade-up" data-aos-duration="2000">¡Conocé los servicios que te ofrecemos!</h2>
+          <p class=" fs-4 titulo-parrafo" data-aos="fade-up" data-aos-duration="2000">Pensión completa gourmet bajo el servicio de todo incluído:</p>
+            <ul class="col-11 col-md-6 item__paralax" data-aos="fade-up" data-aos-duration="2000">
+              <li class="fs-4">Desayuno americano, Almuerzo, Merienda, Cena.</li>
+              <li class="fs-4">Bebidas incluidas: gaseosa en almuerzo y cena.</li>
             </ul>
-          <p class="fs-4 titulo-parrafo">LaDorada presenta una propuesta autosustentable, dónde el 80% de los productos que se consumen son organicos, productos regionales y de producción propia</p>
+          <p class="fs-4 titulo-parrafo" data-aos="fade-up" data-aos-duration="2000">La Dorada presenta una propuesta autosustentable, dónde el 80% de los productos que se consumen son organicos, productos regionales y de producción propia</p>
       </section>
     </main>
 
     <footer class="d-flex justify-content-between align-items-center flex-column flex-lg-row gap-3 pt-3 pb-3">
-      <a class="navbar-brand d-flex justify-content-center align-items-center dorada__nav__a fs-3" href="index.html">
+      <a class="navbar-brand d-flex justify-content-center align-items-center dorada__nav__a fs-3" href="../index.html">
           <img src="../assets/logo.png" alt="Logo" width="60" height="auto" class="d-inline-block align-text-top me-4 ms-4">
           <h3>LA DORADA</h3>
       </a>
-      <section class="geo-mail d-flex flex-wrap justify-content-center gap-2">
+      <section class="mail__geo d-flex flex-wrap justify-content-center gap-2">
         <div>
           <a  class="fs-6" href="https://goo.gl/maps/SUAMTLM3Tbd2eHdr8">
             <i class="bi bi-geo-alt-fill dorada__footer__contacto fs-3"></i>
@@ -111,5 +115,11 @@
       </section>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+     <!-- AOS -->
+     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+     <!-- AOS inicializacion-->
+     <script>
+       AOS.init();
+     </script>
   </body>
 </html>
