--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>LA DORADA</title>
+    <!-- SEO -->
+    <meta name="description" content="Explora nuestras habitaciones cuidadosamente diseñadas en La Dorada. Descubre el lujo y la comodidad en cada detalle. Desde nuestras habitaciones estándar hasta nuestras suites exclusivas, te ofrecemos un alojamiento de primer nivel para que disfrutes de una estancia inolvidable. Encuentra la habitación perfecta para ti">
+    <meta name="keywords" content="Habitaciones en La Dorada, Alojamiento de lujo, Suites exclusivas, Habitaciones estándar, Comodidad y estilo, Vistas panorámicas, Espacio y confort, Experiencia de hospedaje, Camas cómodas, Baños de lujo, Privacidad y tranquilidad">
      <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,23 +15,25 @@
     <link rel="shortcut icon" href="../assets/favicon.png" type="image/png">
     <!-- boostrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-
+     <!-- AOS -->
+     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
+    <title>LA DORADA | Habitaciones</title>
 </head>
   <body>
     <header class="d-flex flex-column align-items-center">
         <nav class="fixed-bottom navbar navbar-expand-lg dorada__bg__nav">
-            <div class="container-fluid">
-                <div class="">
-                    <a class="navbar-brand d-flex justify-content-center align-items-center dorada__nav__a fs-3" href="index.html">
+            <section class="container-fluid">
+                <article>
+                    <a class="navbar-brand d-flex justify-content-center align-items-center dorada__nav__a fs-3" href="../index.html">
                         <img src="../assets/logo.png" alt="Logo" width="60" height="auto" class="d-inline-block align-text-top me-4 ms-4">
                       LA DORADA
                     </a>
-                </div>
+                </article>
               <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+              <article class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav align-items-center">
                   <li class="nav-item">
                     <a class="nav-link dorada__nav__link fs-5" aria-current="page" href="../index.html">Home</a>
@@ -50,17 +54,19 @@
                     <a class="nav-link dorada__nav__link fs-5" aria-current="page" href="contacto.html">Contacto</a>
                   </li>
                 </ul>
-              </div>
-            </div>
+              </article>
+            </section>
         </nav>
     </header>
     <main id="main-habitaciones">
       <section class="padding-section imagen" style="background-image: url(../assets/habitacion-1.jpg)" ></section>
-      <section class="padding-section text text-white">
-          <h2 class="display-5 titulo-parrafo">¡Descansá en un hotel súper equipado y moderno!</h2>
-          <p class="fs-4 mb-lg-5 titulo-parrafo">Nuestro hotel cuenta con las más confortables habitaciones para lograr un descanso óptimo y necesario para disfrutar de unas vacaciones únicas.</p>
-          <ul class="col-12 col-md-6 item__paralax">
-            <li class="fs-4">Amplias y luminosas habitaciones, con elegante diseño de interiores y textiles de alta calidad.</li>
+      <section class="padding-section text text-white d-flex flex-column align-items-center">
+          <div class="degradado1"></div>
+          <h1 class="col-11 display-5 titulo-parrafo" data-aos="fade-up" data-aos-duration="2000">¡Descansá en un hotel súper equipado y moderno!</h1>
+          <p class="fs-4 mb-lg-5 titulo-parrafo" data-aos="fade-up" data-aos-duration="2000">Nuestro hotel cuenta con las más confortables habitaciones para lograr un descanso óptimo y necesario para disfrutar de unas vacaciones únicas.</p>
+          <ul class="col-11 col-md-6 item__paralax" data-aos="fade-up" data-aos-duration="2000">
+            <li class="fs-4">
+              Amplias y luminosas habitaciones, con elegante diseño de interiores y textiles de alta calidad.</li>
             <li class="fs-4">Atención al cliente personalizada. Siempre a tu disposición</li>
             <li class="fs-4">Acceso al área wellness, gym, y masajes.</li>
             <li class="fs-4">Acceso a internet 24hs</li>
@@ -69,8 +75,9 @@
       </section>
       <section class="padding-section imagen" style="background-image: url(../assets/habitacion-3.jpg)"></section>
       <section class="padding-section text text-white d-flex flex-column align-items-center">
-          <h2 class="display-5 mb-lg-5 titulo-parrafo">Estamos poreparados para ofrecerte una estadía ideal, en el corazón del Norte Cordobés.</h2>
-            <ul class="col-12 col-md-6 item__paralax">
+          <div class="degradado2"></div>
+          <h2 class="col-11 col-lg-8 display-5 mb-lg-5 titulo-parrafo" data-aos="fade-up" data-aos-duration="2000">Estamos poreparados para ofrecerte una estadía ideal, en el corazón del Norte Cordobés.</h2>
+          <ul class="col-11 col-md-6 item__paralax" data-aos="fade-up" data-aos-duration="2000">
               <li class="fs-4">
                 Para alojarte en nuestro Hotel Boutique la reserva mínima es de <i>dos noches</i>, exceptuando fechas especiales en el año.
               </li>
@@ -83,16 +90,16 @@
               <li class="fs-4">
                 Además con tu estadía tenes incluido un completisimo desayuno americano, almuerzo, merienda y cena.
               </li>
-            </ul>
-          </section>
+          </ul>
+      </section>
     </main>
 
     <footer class="d-flex justify-content-between align-items-center flex-column flex-lg-row gap-3 pt-3 pb-3">
-      <a class="navbar-brand d-flex justify-content-center align-items-center dorada__nav__a fs-3" href="index.html">
+      <a class="navbar-brand d-flex justify-content-center align-items-center dorada__nav__a fs-3" href="../index.html">
           <img src="../assets/logo.png" alt="Logo" width="60" height="auto" class="d-inline-block align-text-top me-4 ms-4">
           <h3>LA DORADA</h3>
       </a>
-      <section class="geo-mail d-flex flex-wrap justify-content-center gap-2">
+      <section class="mail__geo d-flex flex-wrap justify-content-center gap-2">
         <div>
           <a  class="fs-6" href="https://goo.gl/maps/SUAMTLM3Tbd2eHdr8">
             <i class="bi bi-geo-alt-fill dorada__footer__contacto fs-3"></i>
@@ -118,6 +125,12 @@
           </a>
       </section>
   </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  <!-- AOS -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <!-- AOS inicializacion-->
+  <script>
+    AOS.init();
+  </script>  
   </body>
 </html>
